--- a/style.css
+++ b/style.css
@@ -18,26 +18,111 @@ body {
 }
 
 .container {
-  max-width: 1440px;
-  margin: 0 auto;
-}
-
-.main-container {
   display: flex;
   flex-wrap: wrap;
   max-width: 1440px;
   margin: 0 auto;
 }
+.header {
+  max-width: 1440px;
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  background-color: blueviolet;
+  padding: 0 10px;
+
+  border-radius: 20px;
+}
+
+.codewars-badge {
+  width: 80%;
+  min-width: 200px;
+}
+
+.main {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
 
 .main-title {
   font-size: 35px;
   text-align: center;
-  padding-top: 20px;
-  color: purple;
+  color: rgb(235, 188, 20);
+}
+
+.main-section-title {
+  color: rgba(255, 0, 8, 0.685);
 }
 
 .section {
-  padding-bottom: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.left-side {
+  display: flex;
+  gap: 5px;
+  flex-direction: column;
+  align-items: center;
+  min-width: 300px;
+  width: 28%;
+  border-radius: 20px;
+  margin: 5px;
+}
+
+.photo-section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: rgb(0, 0, 0, 0.8);
+  padding: 5px 10px;
+  border-radius: 20px;
+  gap: 10px;
+}
+
+.contacts-section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: khaki;
+  padding: 5px 10px;
+  border-radius: 20px;
+  gap: 10px;
+  width: 100%;
+}
+
+.skills-section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: khaki;
+  padding: 5px 10px;
+  border-radius: 20px;
+  gap: 10px;
+  width: 100%;
+}
+.languages-section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 5px 10px;
+  border-radius: 20px;
+  gap: 10px;
+  width: 100%;
+  background-color: khaki;
+}
+
+.education-section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 5px 10px;
+  border-radius: 20px;
+  gap: 10px;
+  width: 100%;
+  background-color: khaki;
 }
 
 .section-title {
@@ -45,26 +130,13 @@ body {
   color: purple;
 }
 
-.left-side {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  background-color: khaki;
-  width: 30%;
-}
-
 .right-side {
+  min-width: 300px;
   width: 70%;
-}
-
-p {
-  padding: 0px 20px;
-}
-
-.right-side .section-title {
-  width: 100%;
+  gap: 10px;
+  border-radius: 20px;
+  margin: 5px;
   background-color: khaki;
-  padding: 0 7px;
 }
 
 .code-section {
@@ -72,41 +144,59 @@ p {
   flex-direction: column;
   align-items: center;
   width: 100%;
-  padding-bottom: 20px;
 }
 
 .nav-list {
   display: flex;
-  justify-content: flex-end;
+  flex-direction: row;
+  justify-content: end;
   align-items: center;
   min-height: 30px;
   list-style: none;
-  background-color: blueviolet;
+  width: 100%;
+}
+
+.nav-item {
+  display: flex;
+  align-items: center;
+  height: 50px;
+  margin: 0 10px;
+  padding: 5px;
+  transition: all 0.8s;
+}
+
+.nav-item:last-child {
+  margin-right: 0px;
 }
 
 .nav-link {
-  padding: 6px 20px;
+  font-size: 20px;
   color: khaki;
   text-decoration: none;
 }
-
 .nav-link:hover {
+  color: khaki;
+  text-decoration: none;
+  height: 50px;
+  color: purple;
+}
+
+.nav-item:hover {
   cursor: pointer;
   background-color: khaki;
   color: purple;
 }
 
 .profile-photo {
-  border-radius: 200px;
-  padding-top: 20px;
-  width: 100%;
+  width: 300px;
+  height: 400px;
+  border-radius: 15px;
 }
 
 .code-field {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 10px;
   width: 500px;
   background-color: rgb(251, 233, 233);
   border: solid 1px;
@@ -116,27 +206,40 @@ p {
 
 .text {
   font-size: 18px;
-  margin-top: 10px;
 }
 
 .contacts-list {
   list-style: none;
-  padding: 10px 20px 0px 20px;
   font-size: 20px;
+  color: black;
+  font-weight: 700;
 }
 
-.contacts-list li {
-  margin: 10px 0px 0px 0px;
+.contacts-list a {
+  color: black;
+  font-weight: 100;
+}
+.contacts-list a:visited {
+  color: black;
+}
+
+.contacts-list a:hover {
+  color: red;
 }
 
 .skills-list {
-  padding: 10px 20px;
+  width: 200px;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
+  list-style: none;
   font-size: 18px;
 }
 
-.skills-list li {
-  letter-spacing: 2px;
-  margin: 0px 0px 10px 0px;
+.logo {
+  width: 48px;
+  height: 48px;
 }
 
 .courses-section {
@@ -146,20 +249,74 @@ p {
   width: 100%;
 }
 
+.slider-area {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 500px;
+  height: 400px;
+}
+
+.left-btn {
+  width: 40px;
+  height: 40px;
+  background-image: url("./assets/left.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.right-btn {
+  width: 40px;
+  height: 40px;
+  background-image: url("./assets/right.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.left-btn:hover,
+.right-btn:hover {
+  cursor: pointer;
+}
+
+.slider {
+  width: 400px;
+  height: 400px;
+  display: flex;
+  flex-direction: row;
+  margin-left: 0px;
+  overflow: hidden;
+}
+
+.certificates {
+  display: flex;
+  flex-direction: row;
+}
+
+.cert {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: khaki;
+  height: 400px;
+  min-width: 400px;
+  transition: all ease 1s;
+}
+
+.certificat {
+  width: 390px;
+  height: 290px;
+}
+
+.certificat-vertical {
+  width: 300px;
+  height: 390px;
+}
+
 .courses-list {
   font-size: 20px;
-  padding: 10px 20px 0 20px;
 }
 
 .about-section {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding-top: 20px;
-  width: 100%;
-}
-
-.languages-section {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -167,8 +324,8 @@ p {
 }
 
 .languages-list {
+  list-style: none;
   font-size: 20px;
-  padding-top: 10px;
   letter-spacing: 2px;
 }
 
@@ -179,15 +336,7 @@ p {
   width: 100%;
 }
 
-.education-section {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 100%;
-}
-
 .projects-list {
-  padding: 10px 20px;
   font-size: 20px;
 }
 
@@ -198,18 +347,25 @@ p {
 .footer {
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
   min-height: 30px;
   background-color: blueviolet;
   max-width: 1440px;
   width: 100%;
-  margin: 0 auto;
+  padding: 5px 20px;
+
+  border-radius: 20px;
+}
+
+.github-logo {
+  width: 40px;
+  height: 40px;
 }
 
 .school-logo {
-  width: 50px;
-  height: 50px;
+  width: 80px;
+  height: 40px;
 }
 
 .footer a {
@@ -218,17 +374,4 @@ p {
 
 .footer p {
   color: khaki;
-}
-
-@media (max-width: 850px) {
-  .left-side {
-    width: 100%;
-  }
-  .right-side {
-    width: 100%;
-  }
-
-  .nav-link {
-    font-size: 8px;
-  }
 }
