--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+@font-face {
+  font-family: "CrimsonRegular";
+  src: url("./assets/fonts/CrimsonText-Regular.ttf");
+  font-style: normal;
+  font-weight: normal;
+}
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -10,7 +17,7 @@ html {
 }
 
 body {
-  min-width: 100%;
+  width: 100%;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -24,14 +31,95 @@ body {
   margin: 0 auto;
 }
 .header {
-  max-width: 1440px;
   display: flex;
   justify-content: space-between;
+  align-items: center;
   width: 100%;
-  background-color: blueviolet;
+  background-color: rgb(0, 0, 0, 0.8);
   padding: 0 10px;
-
   border-radius: 20px;
+  margin: 0 auto;
+}
+.nav {
+  display: flex;
+}
+
+.burger-menu-icon {
+  display: none;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  width: 50px;
+  height: 40px;
+  background-color: transparent;
+  margin-right: 10px;
+}
+
+.burger-menu-icon:hover {
+  cursor: pointer;
+}
+
+.line {
+  background-color: khaki;
+  width: 50px;
+  height: 2px;
+  transition: transform 0.5s, opacity 0.5s;
+}
+
+.burger-menu-icon.active .line:first-child {
+  transform: translateY(13px) rotate(45deg);
+}
+
+.burger-menu-icon.active .line:nth-child(2) {
+  opacity: 0;
+}
+.burger-menu-icon.active .line:nth-child(3) {
+  transform: translateY(-13px) rotate(-45deg);
+}
+
+.burger-menu {
+  visibility: hidden;
+  position: absolute;
+  top: 50px;
+  right: 143px;
+  background-color: rgb(0, 0, 0, 0.7);
+  height: 400px;
+  width: 300px;
+  transform: translateX();
+  transition: 0.5s ease-in-out;
+  animation: close 0.5s ease-in-out;
+}
+
+@keyframes close {
+  0% {
+    transform: translateX(0);
+  }
+  50% {
+    transform: translateX(-10px);
+  }
+  100% {
+    transform: translateX(10px);
+  }
+}
+
+.burger-menu-open {
+  visibility: visible;
+  transform: translateX(0);
+  transition: 0.5s;
+  animation: comein 0.5s ease-in-out;
+}
+@keyframes comein {
+  0% {
+    transform: translateX(10px);
+  }
+
+  50% {
+    transform: translateX(-10px);
+  }
+
+  100% {
+    transform: translateX(0px);
+  }
 }
 
 .codewars-badge {
@@ -43,9 +131,11 @@ body {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+  margin: 0 auto;
 }
 
 .main-title {
+  font-family: "CrimsonRegular", serif;
   font-size: 35px;
   text-align: center;
   color: rgb(235, 188, 20);
@@ -53,6 +143,7 @@ body {
 
 .main-section-title {
   color: rgba(255, 0, 8, 0.685);
+  font-family: "CrimsonRegular", serif;
 }
 
 .section {
@@ -125,7 +216,17 @@ body {
   background-color: khaki;
 }
 
+.education-section p {
+  font-family: "CrimsonRegular", serif;
+  font-size: 20px;
+}
+
+.section-about {
+  padding: 10px 30px;
+}
+
 .section-title {
+  font-family: "CrimsonRegular", serif;
   text-align: center;
   color: purple;
 }
@@ -135,6 +236,7 @@ body {
   width: 70%;
   gap: 10px;
   border-radius: 20px;
+  padding: 10px;
   margin: 5px;
   background-color: khaki;
 }
@@ -147,6 +249,7 @@ body {
 }
 
 .nav-list {
+  position: relative;
   display: flex;
   flex-direction: row;
   justify-content: end;
@@ -170,6 +273,7 @@ body {
 }
 
 .nav-link {
+  font-family: "CrimsonRegular", serif;
   font-size: 20px;
   color: khaki;
   text-decoration: none;
@@ -188,8 +292,8 @@ body {
 }
 
 .profile-photo {
-  width: 300px;
-  height: 400px;
+  width: 340px;
+  height: 420px;
   border-radius: 15px;
 }
 
@@ -197,18 +301,16 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 500px;
+  width: 100%;
+  max-width: 500px;
   background-color: rgb(251, 233, 233);
   border: solid 1px;
   border-color: blueviolet;
   font-size: 10px;
 }
 
-.text {
-  font-size: 18px;
-}
-
 .contacts-list {
+  font-family: "CrimsonRegular", serif;
   list-style: none;
   font-size: 20px;
   color: black;
@@ -216,6 +318,7 @@ body {
 }
 
 .contacts-list a {
+  font-family: "CrimsonRegular", serif;
   color: black;
   font-weight: 100;
 }
@@ -242,35 +345,52 @@ body {
   height: 48px;
 }
 
-.courses-section {
+.logo:hover {
+  cursor: pointer;
+  transform: scale(1.2);
+}
+
+.courses-list {
   display: flex;
-  flex-direction: column;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: space-around;
   align-items: center;
   width: 100%;
 }
 
+.cert-vert {
+  width: 180px;
+  height: 250px;
+}
+
+.cert {
+  width: 250px;
+  height: 180px;
+}
+
+.cert:hover,
+.cert-vert:hover {
+  transform: scale(1.5);
+}
+
 .slider-area {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
-  width: 500px;
-  height: 400px;
+  width: 100%;
+  height: 300px;
 }
 
 .left-btn {
   width: 40px;
   height: 40px;
-  background-image: url("./assets/left.png");
-  background-repeat: no-repeat;
-  background-size: cover;
 }
 
 .right-btn {
   width: 40px;
   height: 40px;
-  background-image: url("./assets/right.png");
-  background-repeat: no-repeat;
-  background-size: cover;
+  transform: rotateY(180deg);
 }
 
 .left-btn:hover,
@@ -279,7 +399,7 @@ body {
 }
 
 .slider {
-  width: 400px;
+  width: 730px;
   height: 400px;
   display: flex;
   flex-direction: row;
@@ -287,33 +407,41 @@ body {
   overflow: hidden;
 }
 
-.certificates {
-  display: flex;
-  flex-direction: row;
-}
-
-.cert {
+.projects {
   display: flex;
   align-items: center;
-  justify-content: center;
-  background-color: khaki;
-  height: 400px;
-  min-width: 400px;
+  flex-direction: row;
+  gap: 30px;
   transition: all ease 1s;
 }
 
-.certificat {
-  width: 390px;
-  height: 290px;
+.project {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 300px;
+  min-width: 350px;
 }
 
-.certificat-vertical {
-  width: 300px;
-  height: 390px;
+.project p {
+  font-size: 20px;
+  font-family: "CrimsonRegular", serif;
+  font-weight: 700;
+  margin-bottom: 15px;
+}
+
+.project-img {
+  border-radius: 10px;
+  width: 350px;
+  height: 230px;
 }
 
 .courses-list {
-  font-size: 20px;
+  width: 100%;
+  list-style: none;
+  font-family: "CrimsonRegular", serif;
+  font-size: 25px;
 }
 
 .about-section {
@@ -324,6 +452,7 @@ body {
 }
 
 .languages-list {
+  font-family: "CrimsonRegular", serif;
   list-style: none;
   font-size: 20px;
   letter-spacing: 2px;
@@ -344,17 +473,22 @@ body {
   letter-spacing: 2px;
 }
 
+.text {
+  font-family: "CrimsonRegular", serif;
+  font-size: 25px;
+  text-indent: 30px;
+}
+
 .footer {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
   min-height: 30px;
-  background-color: blueviolet;
+  background-color: rgb(0, 0, 0, 0.8);
   max-width: 1440px;
   width: 100%;
   padding: 5px 20px;
-
   border-radius: 20px;
 }
 
@@ -373,5 +507,41 @@ body {
 }
 
 .footer p {
+  font-family: "CrimsonRegular", serif;
   color: khaki;
+}
+@media (max-width: 740px) {
+  .nav {
+    display: none;
+  }
+  .burger-menu-icon {
+    display: flex;
+  }
+
+  .courses-list {
+    flex-direction: column;
+  }
+
+  .slider-area {
+    width: 300px;
+  }
+
+  .main {
+    justify-content: center;
+  }
+
+  .project-img {
+    width: 250px;
+    height: 150px;
+  }
+
+  .projects-section {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .project {
+    height: 250px;
+    min-width: 290px;
+  }
 }
